force-app/main/default/objects/Operational_View_Mapping__c/Operational_View_Mapping__c.object-meta.xml
<CustomObject>
    <description
  >This object is used to map to what places a scaleMatters Funnel Conversion Cycle into specific Operational Views based on the relationship of the related Lead, Contact, Account or Opportunity.</description>
    <label>Operational View Mapping</label>
    <nameField>
        <displayFormat>sM_OVM# - {00000000}</displayFormat>
        <label>Operational View Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operational View Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>