force-app/main/default/objects/Operational_View_Mapping__c/fields/Contact_SOQL_Condition__c.field-meta.xml
<CustomField>
    <fullName>Contact_SOQL_Condition__c</fullName>
    <description
  >SOQL Condition on the Contact Record to set into Operational View</description>
    <label>Contact SOQL Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>