force-app/main/default/objects/Operational_View_Mapping__c/fields/Contact_SOQL_Order__c.field-meta.xml
<CustomField>
    <fullName>Contact_SOQL_Order__c</fullName>
    <description>Order in which the SOQL condition should run in on Lead
Help Text</description>
    <label>Contact SOQL Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>