force-app/main/default/objects/Operational_View_Mapping__c/fields/Lead_SOQL_Condition__c.field-meta.xml
<CustomField>
    <fullName>Lead_SOQL_Condition__c</fullName>
    <description
  >SOQL Condition on the Lead Record to set into Operational View</description>
    <label>Lead SOQL Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>