force-app/main/default/objects/Operational_View_Mapping__c/fields/Operational_View__c.field-meta.xml
<CustomField>
    <fullName>Operational_View__c</fullName>
    <description>The list of Operational Views a customer can use in scaleMatters</description>
    <label>Operational View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Industry View</fullName>
            </value>
            <value>
                <fullName>Customer Size View</fullName>
            </value>
            <value>
                <fullName>Customer Type View</fullName>
            </value>
            <value>
                <fullName>Product View</fullName>
            </value>
            <value>
                <fullName>Sales Team View</fullName>
            </value>
            <value>
                <fullName>Sales Territory View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>