force-app/main/default/objects/Operational_View_Mapping__c/fields/Operational_View_ID__c.field-meta.xml
<CustomField>
    <fullName>Operational_View_ID__c</fullName>
    <description>Used the GUID for scaleMatters&apos; to run queries off of operational view values.</description>
    <label>Operational View ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>