force-app/main/default/objects/Operational_View_Mapping__c/fields/Operational_View_Name__c.field-meta.xml
<CustomField>
    <fullName>Operational_View_Name__c</fullName>
    <description>Name of view to display within scaleMatters</description>
    <label>Operational View Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>