force-app/main/default/objects/Operational_View_Mapping__c/fields/Opportunity_SOQL_Condition__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_SOQL_Condition__c</fullName>
    <description
  >SOQL Condition on the Opportunity Record to set into Operational View</description>
    <label>Opportunity SOQL Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>