force-app/main/default/objects/Operational_View_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Operational_View__c</columns>
    <columns>Operational_View_Name__c</columns>
    <columns>Lead_SOQL_Condition__c</columns>
    <columns>Contact_SOQL_Condition__c</columns>
    <columns>Opportunity_SOQL_Condition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>